@@ -27,6 +27,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - TRQ-3039. Fix a deadlock when deleting a job where other jobs have after any dependencies
       on the first job. (backported from 5.1.1)
   b - TRQ-3116. Make qsub only retry on transient errors. (backported from 5.1.1)
+  b - TRQ-3122. Fix a problem with login_property not working correctly (cray only, backported
+      from 5.1.1).
  
 
 5.0.1.h2
